# flipsky_erpm_ble_spp

./: CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  ble_spp.c  button.h  controller.c  controller.h  crc.c  crc.h  idf_component.yml  led_break.c  led_break.h  nvs_storage.c  nvs_storage.h  relay_control.c  relay_control.h  relay_pulse.c  relay_pulse.h  setspeed.bas  uart_async_rxtxtasks_main.c
