idf_component_register(SRCS "relay_pulse.c" "relay_control.c" "ble_spp.c" "uart_async_rxtxtasks_main.c"
                            "controller.c"
                            "crc.c"
                            "led_break.c"
                            "relay_control.c"
                    INCLUDE_DIRS "."
                    )
             
